fix scrollbar

--- a/frontend/src/styles/blogs.css
+++ b/frontend/src/styles/blogs.css
@@ -5,6 +5,7 @@
     color: white;
     display: flex;
     justify-content: center;
+    overflow-y: auto;
 }
 
 .swiper-wrapper {
